welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: not found: value esSurBiscuit
return esSurBiscuit();
       ^